@@ -83,6 +83,7 @@ Useful commands
 - npm run weftend -- export-json <outRoot> --format normalized_v0
 - npm run weftend -- adapter list
 - npm run weftend -- adapter doctor
+- npm run weftend -- adapter doctor --text
 - npm run weftend -- safe-run <input> --out <dir> --adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature
 - npm run weftend -- safe-run <input> --out <dir> --adapter archive --enable-plugin tar
 
